k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
  namespace: nagp-assignment
spec:
  replicas: 4

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: service-api

  template:
    metadata:
      labels:
        app: service-api

    spec:
      containers:
        - name: service-api
          image: YOUR_DOCKERHUB_USERNAME/nagp-assignment:YOUR_IMAGE_TAG

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
