k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: nagp-assignment
spec:
  type: ClusterIP

  selector:
    app: service-api

  ports:
    - port: 80
      targetPort: 8080
